# wolfenstein

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md  install_deps.sh  main.cpp
.github/workflows/: cmake-single-platform.yml
aaaa/: config.h  game.cpp  game.h  macros.h  map.cpp  player.h  raycast.h  types.h  utils.cpp
app/: CMakeLists.txt  main.cpp
assets/levels/: config.json  level1.json  level2.json
assets/maps/: map1.txt  map2.txt
include/: clock.h  config.h  game.h  macros.h  map.h  player.h  raycast.h  types.h  utils.h
include/base/: i_base.h  macros.h  types.h  utils.h
include/camera/: camera.h  ray_cast.h
include/character/: i_character.h  player.h
include/clock/: clock.h
include/game/: game.h
include/map/: map.h
include/render/: i_render.h  render_2d.h  render_3d_simple.h  render_3d_texture.h  utils.h
scripts/: compile.sh  install_deps.sh
src/: game.cpp  map.cpp  player.cpp  raycast.cpp
src/Animation/: CMakeLists.txt
src/Animation/include/Animation/: animation.h  animator.h  looped_animation.h  time_based_single_animation.h  triggered_single_animation.h  walk_animation.h
src/Animation/src/: animation.cpp  looped_animation.cpp  time_based_single_animation.cpp  triggered_single_animation.cpp  walk_animation.cpp
src/Camera/: CMakeLists.txt
src/Camera/include/Camera/: camera.h  ray.h  raycaster.h  single_raycaster.h
src/Camera/src/: camera.cpp  ray.cpp  raycaster.cpp  single_raycaster.cpp
src/Characters/: CMakeLists.txt
src/Characters/include/Characters/: character.h  enemy.h  player.h
src/Characters/src/: enemy.cpp  player.cpp
src/CollisionManager/: CMakeLists.txt
src/CollisionManager/include/CollisionManager/: collision_manager.h
src/CollisionManager/src/: collision_manager.cpp
src/Core/: CMakeLists.txt
src/Core/include/Core/: game.h  scene.h  scene_loader.h
src/Core/src/: game.cpp  scene.cpp  scene_loader.cpp
src/GameObjects/: CMakeLists.txt
src/GameObjects/include/GameObjects/: dynamic_object.h  game_object.h  static_object.h
src/GameObjects/src/: dynamic_object.cpp  game_object.cpp  static_object.cpp
src/Graphics/: CMakeLists.txt
src/Graphics/include/Graphics/: renderer.h  renderer_2d.h  renderer_3d.h  renderer_interface.h  renderer_menu.h  renderer_result.h  scene.h
src/Graphics/src/: renderer.cpp  renderer_2d.cpp  renderer_3d.cpp  renderer_interface.cpp  renderer_menu.cpp  renderer_result.cpp  scene.cpp
src/Map/: CMakeLists.txt
src/Map/include/Map/: map.h
src/Map/src/: map.cpp
src/Math/: CMakeLists.txt
src/Math/include/Math/: vector.h
src/Math/src/: vector.cpp
src/NavigationManager/: CMakeLists.txt
src/NavigationManager/include/NavigationManager/: navigation_helper.h  navigation_manager.h
src/NavigationManager/src/: navigation_manager.cpp
src/ShootingManager/: CMakeLists.txt
src/ShootingManager/include/ShootingManager/: shooting_helper.h  shooting_manager.h
src/ShootingManager/src/: shooting_manager.cpp
src/SoundManager/: CMakeLists.txt
src/SoundManager/include/SoundManager/: sound_manager.h
src/SoundManager/src/: sound_manager.cpp
src/State/: CMakeLists.txt
src/State/include/State/: enemy_state.h  state.h  weapon_state.h  weapon_stateabc.h
src/State/include/State/WeaponState/: loaded_state.h  out_of_ammo_state.h  reloading_state.h
src/State/src/: enemy_state.cpp  weapon_state.cpp  weapon_stateabc.cpp
src/State/src/WeaponState/: loaded_state.cpp  out_of_ammo_state.cpp  reloading_state.cpp
src/Strike/: CMakeLists.txt
src/Strike/include/Strike/: shotgun.h  simple_weapon.h  strike.h  weapon.h
src/Strike/src/: shotgun.cpp  simple_weapon.cpp  weapon.cpp
src/TextureManager/: CMakeLists.txt
src/TextureManager/include/TextureManager/: texture_manager.h
src/TextureManager/src/: texture_manager.cpp
src/TimeManager/: CMakeLists.txt
src/TimeManager/include/TimeManager/: time_manager.h
src/TimeManager/src/: time_manager.cpp
src/Utilities/: CMakeLists.txt
src/Utilities/include/Utilities/: logger.h
src/Utilities/src/: logger.cpp
src/Utility/: CMakeLists.txt
src/Utility/include/Utility/: logger.h  uuid_generator.h
src/Utility/src/: logger.cpp  uuid_generator.cpp
src/base/: types.cpp  utils.cpp
src/camera/: camera.cpp  ray_cast.cpp
src/character/: player.cpp
src/clock/: clock.cpp
src/game/: game.cpp
src/map/: map.cpp
src/render/: i_render.cpp  render_2d.cpp  render_3d_simple.cpp  render_3d_texture.cpp  utils.cpp
