add_library(
    scene
    STATIC
    src/scene.cpp
)
target_include_directories(scene PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)
target_link_libraries(
    scene
    PUBLIC
    game_object
    map
    navigation_manager
    collision_manager
    character
)

add_library(
    game
    STATIC
    src/game.cpp
)
target_include_directories(game PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)
target_link_libraries(
    game
    PUBLIC
    scene
    camera
    character
    game_object
    map
    vector
    renderer
    time_manager
    collision_manager
    texture_manager
    navigation_manager
    SDL2
    SDL2_image
    SDL2_ttf
    enemy_state
)
